cabal-version:      2.0
name:               lazy-semantics-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3
license-file:       LICENSE
author:             Nicholas Coltharp
maintainer:         contact@heraplem.xyz
-- copyright:
category:           Research
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

library
    exposed-modules:  Language.Lazy
    default-extensions: DataKinds
                      , TypeFamilies
    build-depends:    base ^>=4.18.2.1
                    , mtl ^>=2.3.1
    hs-source-dirs:   src
    default-language: GHC2021
