cabal-version:      2.0
name:               lazy-semantics-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3
license-file:       LICENSE
author:             Nicholas Coltharp
maintainer:         contact@heraplem.xyz
-- copyright:
category:           Research
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

library
    exposed-modules:  Language.Lazy
                    , Language.LazySmall
                    , Control.Monad.Exit
                    , Control.Monad.Heap.List
                    , Control.Monad.Ref
                    , Control.Monad.Tick
    default-extensions: AllowAmbiguousTypes
                      , DataKinds
                      , BlockArguments
                      , FunctionalDependencies
                      , LambdaCase
                      , RebindableSyntax, ImplicitPrelude
                      , TemplateHaskell
                      , TypeFamilies
    build-depends:    base ^>=4.18.2.1
                    , mtl ^>=2.3.1
                    , polysemy ^>=1.9.2.0
                    , polysemy-plugin ^>=0.4.5.3
                    , lens ^>=5.3.4
                    , recursion-schemes ^>=5.2.3
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options:      -fplugin=Polysemy.Plugin
